--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongodb": "^1.4.39",
+    "mongoskin": "^1.4.13",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "serve-favicon": "~2.3.0"
