--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoskin": "^1.4.13",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mongoose": "~4.1.5"
   }
 }
