--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^1.4.39",
     "mongoskin": "^1.4.13",
     "morgan": "~1.6.1",
+    "node-sass": "3.3.3",
     "node-sass-middleware": "0.8.0",
     "serve-favicon": "~2.3.0"
   }
